src/Community.css
.community {
  margin-top: 130px;
  display: flex;
  flex-direction: column;
}

.community-header {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.community-footer {
  display: flex;
  justify-content: center;
  margin-bottom: 90px;
}

.community-text {
  color: #404040;
  font-weight: 600;
  margin-bottom: 0px;
}

.community-header > hr {
  width: 80px;
  border: 0px;
  height: 2px;
  border-radius: 50%;
  background-color: #f69e0b;
}

.community-card-container {
  max-width: 100%;
  margin: 50px 0;
  grid-gap: 50px 40px;
  display: grid;
  position: relative;

  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

@media only screen and (max-width: 1224px) {
  .community-card-container {
    margin-left: auto;
    margin-right: auto;
  }
}

